changed some syntax to java8