@@ -4,6 +4,7 @@ import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
@@ -58,7 +59,7 @@ public class BaseProxyDatabaseEntryUtilsTests {
 			this.structure = new DummyStructure(utils, CaptureQueryable.class, DummyEntry.class);
 			this.structure.setColumns(new DatabaseScanner(this.database).computeColumnsFor(this, this.structure, DummyEntry.class));
 			utils.setDatabaseScanner(new DatabaseScanner(this.database));
-			utils.getDatabaseScanner().getScanned().put(CaptureQueryable.class, List.of(this));
+			utils.getDatabaseScanner().getScanned().put(CaptureQueryable.class, new ArrayList<>(Arrays.asList(this)));
 		}
 
 		@Override
